--- a/main.css
+++ b/main.css
@@ -8,6 +8,12 @@
 
 body {
 	background-image:url("images/pattern.overlay.jpg");
+	font-size: 18px;
+}
+
+h1 {
+	font-size: 25px;
+	font-weight: normal;
 }
 
 nav a:active {
@@ -18,10 +24,6 @@ nav a:hover {
 	
 }
 
-nav a:visited {
-	color: white;
-}
-
 nav  a:link {
 	font-family:"Goudy Old Style", Cambria;
 	color:white;
@@ -29,16 +31,34 @@ nav  a:link {
 	margin-right: 20px;
 }
 
+nav a:visited {
+	color: white;
+}
+
 nav li {
+	float: left;
 	display:inline;
 	font-weight: 700;
 	font-size: 20px;
+}
+
+nav li a {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+
+nav li a:hover {
+	background-color: black;
 }
 
 nav ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+	overflow: hidden;
 }
 
 /* --- ID Below Here --- */
@@ -54,54 +74,110 @@ nav ul {
 /* --- Classes Below Here --- */
 
 .active {
-	
+	background-color: black;
 }
 
 .aside {
 	background-color: #D6E052;
 	box-shadow: 5px 3px 1px gray;
-	/*grid-area: aside aside2;*/
+	grid-area: a;	
+	text-align: center;
+}
+
+.aside2 {
+	background-color: #D6E052;
+	box-shadow: 5px 3px 1px gray;
+	grid-area: a2;
+	text-align: center;	
 }
 
 .container {
 	display: grid;
 	grid-gap: 15px;
-	/*grid-template-areas:
-		'nav nav nav'
-		'aside heading heading'
-		'aside2 main main'
-		'footer footer footer';*/
 	width: 80%;
+	height: 100%;
 	margin: 15px auto auto auto;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: 40px 200px 40px;
+	grid-template-rows: 50px auto auto auto auto 50px;
+	grid-template-areas: 
+		"n n n n n n n n n n n n"
+		"a a a h h h h h h h h h"
+		"a a a m m m m m m m m m"
+		"a2 a2 a2 m m m m m m m m m"
+		"a2 a2 a2 m m m m m m m m m"
+		"f f f f f f f f f f f f";
+}
+
+.container-youtube {
+	position: relative;
+	width: 100%;
+	overflow: hidden;
+	padding-top: 56.25%;
 }
 
 .footer {
 	background-color: #2C6E91;
 	box-shadow: 5px 3px 1px gray;
 	color: white;
-	/*grid-area: footer;*/
-	grid-column: 1 / -1;
+	grid-area: f;	
+	text-align: end;
 }
 
 .heading {
 	background-color: #51B9AE;
 	box-shadow: 5px 3px 1px gray;
 	color: white;
-	/*grid-area: heading;*/
+	grid-area: h;
+	padding: 5px 40px;
+	align-content: center;
+	justify-content: center;
+}
+
+.intro {
+	
 }
 
 .main {
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+	grid-gap: 20px;
 	background-color: #51B9AE;
 	box-shadow: 5px 3px 1px gray;
-	/*grid-area: main;*/
+	grid-area: m;
+	padding: 40px;
 }
 
 .navbar {
 	background-color: #8361AB;
 	box-shadow: 5px 3px 1px gray;
 	color: white;
-	/*grid-area: nav;*/
-	grid-column: 1 / -1;
+	grid-area: n;
+}
+
+.responsive-iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	border: none;
+}
+
+@media (max-width : 1300px ){
+	.container {
+		grid-template-areas: 
+		"n n n n n n n n n n n n"
+		"h h h h h h h h h h h h"
+		"m m m m m m m m m m m m"
+		"a a a a a a a a a a a a"
+		"a2 a2 a2 a2 a2 a2 a2 a2 a2 a2 a2 a2"
+		"f f f f f f f f f f f f";
+		width: 100%;
+	}
+	.main {
+		grid-template-columns: auto;
+		grid-template-rows: auto;
+	}
 }
