--- a/blogmenu.css
+++ b/blogmenu.css
@@ -76,24 +76,6 @@ nav ul {
 	background-color: #484848;
 }
 
-.aside {
-	background-color: black;
-	color: white;
-	box-shadow: 5px 3px 1px gray;
-	grid-area: a;	
-	text-align: center;
-	padding: 40px;
-	font-family: adventure, script;
-}
-
-.aside2 {
-	background-color: #D6E052;
-	box-shadow: 5px 3px 1px gray;
-	grid-area: a2;
-	font-size: 16px;
-	padding: 20px 40px;
-}
-
 .container {
 	display: grid;
 	grid-gap: 15px;
@@ -101,21 +83,19 @@ nav ul {
 	height: 100%;
 	margin: 15px auto auto auto;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: 50px auto auto auto auto 50px;
+	grid-template-rows: 50px auto 50px;
 	grid-template-areas: 
 		"n n n n n n n n n n n n"
-		"a a a h h h h h h h h h"
-		"a a a m m m m m m m m m"
-		"a2 a2 a2 m m m m m m m m m"
-		"a2 a2 a2 m m m m m m m m m"
+		"h h h h h h h h h h h h"
 		"f f f f f f f f f f f f";
 }
 
-.container-youtube {
-	position: relative;
-	width: 100%;
-	overflow: hidden;
-	padding-top: 56.25%;
+.excerpt {
+	color: black;
+	grid-area: e;
+	padding: 30px 10px 10px;
+	display: inline-block;
+	text-overflow: ellipsis;
 }
 
 .footer {
@@ -130,23 +110,11 @@ nav ul {
 	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: h;
-	padding: 5px 40px;
-	align-content: center;
-	justify-content: center;
-}
-
-.intro {
-	
-}
-
-.main {
 	display: grid;
-	grid-template-columns: 2fr 1fr;
-	grid-gap: 20px;
-	background-color: #51B9AE;
-	box-shadow: 5px 3px 1px gray;
-	grid-area: m;
-	padding: 40px;
+	grid-template-areas: 
+	"th t e ";
+	overflow: hidden;
+	height: 150px;
 }
 
 .navbar {
@@ -156,15 +124,17 @@ nav ul {
 	grid-area: n;
 }
 
-.responsive-iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	width: 100%;
-	height: 100%;
-	border: none;
+.thumbnail {
+	grid-area: th;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.title {
+	color: white;
+	grid-area: t;
+	padding: 10px;
 }
 
 .socials {
@@ -174,18 +144,23 @@ nav ul {
 /*---Responsive Resize Below---*/
 
 @media (max-width : 1300px ){
+		
 	.container {
 		grid-template-areas: 
 		"n n n n n n n n n n n n"
 		"h h h h h h h h h h h h"
-		"m m m m m m m m m m m m"
-		"a a a a a a a a a a a a"
-		"a2 a2 a2 a2 a2 a2 a2 a2 a2 a2 a2 a2"
 		"f f f f f f f f f f f f";
 		width: 100%;
 	}
-	.main {
-		grid-template-columns: auto;
-		grid-template-rows: auto;
+	.heading {
+		grid-template-areas: 
+		"th t"
+		"th e"
+	}
+	.excerpt {
+		padding: 0px 10px 10px;
+	}
+	.title {
+		padding: 0px 10px 0px;
 	}
 }
