--- a/blogmenu.css
+++ b/blogmenu.css
@@ -143,8 +143,11 @@ nav ul {
 
 /*---Responsive Resize Below---*/
 
-@media (max-width : 1300px ){
-		
+@media (max-width : 1000px ){
+	h1 {
+		font-size: 20px;
+	}
+	
 	.container {
 		grid-template-areas: 
 		"n n n n n n n n n n n n"
