--- a/blogmenu.css
+++ b/blogmenu.css
@@ -83,10 +83,11 @@ nav ul {
 	height: 100%;
 	margin: 15px auto auto auto;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: 50px auto 50px;
+	grid-template-rows: 50px auto auto 50px;
 	grid-template-areas: 
 		"n n n n n n n n n n n n"
 		"h h h h h h h h h h h h"
+		"h2 h2 h2 h2 h2 h2 h2 h2 h2 h2 h2 h2"
 		"f f f f f f f f f f f f";
 }
 
@@ -118,7 +119,15 @@ nav ul {
 }
 
 .heading2 {
-	
+	background-color: #51B9AE;
+	color: white;
+	box-shadow: 5px 3px 1px gray;
+	grid-area: h2;
+	display: grid;
+	grid-template-areas: 
+	"th t e";
+	overflow: hidden;
+	height: 150px;
 }
 
 .navbar {
