--- a/blogmenu.css
+++ b/blogmenu.css
@@ -174,6 +174,11 @@ nav ul {
 		"th t"
 		"th e"
 	}
+	.heading2 {
+		grid-template-areas: 
+		"th t"
+		"th e"
+	}
 	.excerpt {
 		padding: 0px 10px 10px;
 	}
