--- a/blogmenu.css
+++ b/blogmenu.css
@@ -83,11 +83,12 @@ nav ul {
 	height: 100%;
 	margin: 15px auto auto auto;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: 50px auto auto 50px;
+	grid-template-rows: 50px auto auto auto 50px;
 	grid-template-areas: 
 		"n n n n n n n n n n n n"
 		"h h h h h h h h h h h h"
 		"h2 h2 h2 h2 h2 h2 h2 h2 h2 h2 h2 h2"
+		"h3 h3 h3 h3 h3 h3 h3 h3 h3 h3 h3 h3"
 		"f f f f f f f f f f f f";
 }
 
@@ -123,6 +124,18 @@ nav ul {
 	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: h2;
+	display: grid;
+	grid-template-areas: 
+	"th t e";
+	overflow: hidden;
+	height: 150px;
+}
+
+.heading3 {
+	background-color: #51B9AE;
+	color: white;
+	box-shadow: 5px 3px 1px gray;
+	grid-area: h3;
 	display: grid;
 	grid-template-areas: 
 	"th t e";
@@ -166,6 +179,7 @@ nav ul {
 		"n n n n n n n n n n n n"
 		"h h h h h h h h h h h h"
 		"h2 h2 h2 h2 h2 h2 h2 h2 h2 h2 h2 h2"
+		"h3 h3 h3 h3 h3 h3 h3 h3 h3 h3 h3 h3"
 		"f f f f f f f f f f f f";
 		width: 100%;
 	}
@@ -175,6 +189,11 @@ nav ul {
 		"th e"
 	}
 	.heading2 {
+		grid-template-areas: 
+		"th t"
+		"th e"
+	}
+	.heading3 {
 		grid-template-areas: 
 		"th t"
 		"th e"
