--- a/blogmenu.css
+++ b/blogmenu.css
@@ -96,7 +96,7 @@ nav ul {
 .excerpt {
 	color: black;
 	grid-area: e;
-	padding: 30px 10px 10px;
+	padding: 30px 40px 10px 0px;
 	display: inline-block;
 	text-overflow: ellipsis;
 }
@@ -114,6 +114,7 @@ nav ul {
 	box-shadow: 5px 3px 1px gray;
 	grid-area: h;
 	display: grid;
+	grid-template-columns: 1fr 2fr 4fr;
 	grid-template-areas: 
 	"th t e";
 	overflow: hidden;
@@ -126,6 +127,7 @@ nav ul {
 	box-shadow: 5px 3px 1px gray;
 	grid-area: h2;
 	display: grid;
+	grid-template-columns: 1fr 2fr 4fr;
 	grid-template-areas: 
 	"th t e";
 	overflow: hidden;
@@ -138,6 +140,7 @@ nav ul {
 	box-shadow: 5px 3px 1px gray;
 	grid-area: h3;
 	display: grid;
+	grid-template-columns: 1fr 2fr 4fr;
 	grid-template-areas: 
 	"th t e";
 	overflow: hidden;
@@ -150,6 +153,7 @@ nav ul {
 	box-shadow: 5px 3px 1px gray;
 	grid-area: h4;
 	display: grid;
+	grid-template-columns: 1fr 2fr 4fr;
 	grid-template-areas: 
 	"th t e";
 	overflow: hidden;
@@ -165,9 +169,6 @@ nav ul {
 
 .thumbnail {
 	grid-area: th;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 .title {
@@ -198,22 +199,26 @@ nav ul {
 		width: 100%;
 	}
 	.heading {
+		grid-template-columns: auto;
 		grid-template-areas: 
 		"th t"
 		"th e"
 	}
 	.heading2 {
+		grid-template-columns: auto;
 		grid-template-areas: 
 		"th t"
 		"th e"
 	}
 	.heading3 {
+		grid-template-columns: auto;
 		grid-template-areas: 
 		"th t"
 		"th e"
 	}
 	
 	.heading4 {
+		grid-template-columns: auto;
 		grid-template-areas: 
 		"th t"
 		"th e"
