reverted asides to orignal grid layout for small sizes

--- a/main.css
+++ b/main.css
@@ -179,7 +179,8 @@ nav ul {
 		"n n n n n n n n n n n n"
 		"h h h h h h h h h h h h"
 		"m m m m m m m m m m m m"
-		"a a a a a a a2 a2 a2 a2 a2 a2"
+		"a a a a a a a a a a a a"
+		"a2 a2 a2 a2 a2 a2 a2 a2 a2 a2 a2 a2"
 		"f f f f f f f f f f f f";
 		width: 100%;
 	}
