updated background and background color of main on index

--- a/blogmenu.css
+++ b/blogmenu.css
@@ -6,7 +6,7 @@
 }
 
 body {
-	background-image:url("images/pattern.overlay.jpg");
+	background-image:url("images/pattern.overlay2.jpg");
 	font-size: 18px;
 	font-family: goudy-old-style,serif, Cambria;
 }
