--- a/blog.posts.css
+++ b/blog.posts.css
@@ -83,7 +83,7 @@ nav ul {
 	height: 100%;
 	margin: 15px auto auto auto;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: 50px auto auto auto auto 50px;
+	grid-template-rows: 50px auto auto 50px;
 	grid-template-areas: 
 		"n n n n n n n n n n n n"
 		"h h h h h h h h h h h h"
@@ -123,9 +123,6 @@ nav ul {
 }
 
 .main {
-	display: grid;
-	grid-template-columns: 2fr 1fr;
-	grid-gap: 20px;
 	background-color: #51B9AE;
 	box-shadow: 5px 3px 1px gray; 
 	grid-area: m;
