--- a/blog.posts.css
+++ b/blog.posts.css
@@ -7,13 +7,20 @@
 
 body {
 	background-image:url("images/pattern.overlay2.jpg");
-	font-size: 20px;
+	font-size: 22px;
 	font-family: goudy-old-style,serif, Cambria;
 }
 
 h1 {
-	font-size: 25px;
+	font-size: 27px;
 	font-weight: normal;
+}
+
+img.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%
 }
 
 nav a:active {
@@ -176,5 +183,8 @@ nav ul {
 		width: 100%;
 		height: 100%;
 		border: none;
-}
+	}
+	.center {
+		
+	}
 }
