--- a/blog.posts.css
+++ b/blog.posts.css
@@ -20,7 +20,9 @@ img.center {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 50%
+	width: 100%;
+	max-width: 400px;
+	height: auto;
 }
 
 nav a:active {
