--- a/main.css
+++ b/main.css
@@ -114,13 +114,6 @@ nav ul {
 		"f f f f f f f f f f f f";
 }
 
-.container-youtube {
-	position: relative;
-	width: 100%;
-	overflow: hidden;
-	padding-top: 56.25%;
-}
-
 .footer {
 	background-color: #2C6E91;
 	box-shadow: 5px 3px 1px gray;
@@ -150,9 +143,9 @@ nav ul {
 	background-color: #51B9AE;
 	box-shadow: 5px 3px 1px gray; 
 	grid-area: m;
-	padding: 40px;
+	padding: 10px 40px 40px 40px;
 	border: 2px solid black;
-	font-size: 22px;
+	font-size: 20px;
 }
 
 .navbar {
@@ -162,15 +155,24 @@ nav ul {
 	grid-area: n;
 }
 
+.container-youtube {
+	position: relative;
+	width: 100%;
+	overflow: hidden;
+	padding-top: 56.25%;
+	margin: 0px;
+}
+
 .responsive-iframe {
 	position: absolute;
 	top: 0;
 	left: 0;
 	bottom: 0;
 	right: 0;
-	width: 100%;
-	height: 100%;
+	width: 320px;
+	height: 240px;
 	border: none;
+	margin: auto;
 }
 
 .socials {
@@ -203,5 +205,5 @@ nav ul {
 		width: 100%;
 		height: 100%;
 		border: none;
-}
+	}
 }
