--- a/main.css
+++ b/main.css
@@ -3,10 +3,22 @@
 
 * {
 	box-sizing: border-box;
+	.mySlides {display: none}
+	img {vertical-align: middle;}
 }
 
 * a {
 	text-decoration: none;
+}
+
+@keyframes fade {
+	from {opacity: .4}
+	to {opacity: 1}
+}
+
+@-webkit-keyframes fade {
+	from {opacity: .4}
+	to {opacity: 1}
 }
 
 body {
@@ -114,6 +126,21 @@ nav ul {
 		"f f f f f f f f f f f f";
 }
 
+.container-youtube {
+	position: relative;
+	width: 100%;
+	overflow: hidden;
+	padding-top: 56.25%;
+	margin: 0px;
+}
+
+.fade {
+	-webkit-animation-name: fade;
+	-webkit-animation-duration: 1.5s;
+	animation-name: fade;
+	animation-duration: 1.5s;
+}
+
 .footer {
 	background-color: #2C6E91;
 	box-shadow: 5px 3px 1px gray;
@@ -155,12 +182,36 @@ nav ul {
 	grid-area: n;
 }
 
-.container-youtube {
+.prev, .next {
+	cursor: pointer;
 	position: relative;
-	width: 100%;
-	overflow: hidden;
-	padding-top: 56.25%;
-	margin: 0px;
+	top: 50%;
+	width: auto;
+	padding: 16px;
+	margin-top: -22px;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	transition: 0.6 ease;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
+}
+
+.prev:hover, .next:hover {
+	background-color: rgba(0,0,0,0.8);
+}
+
+.next {
+	right: 0;
+	border-radius: 3px 0 0 3px;
+}
+
+.numbertext {
+	color: #f2f2f2;
+	font-size: 12px;
+	padding: 8px 12px;
+	position: absolute;
+	top: 0;
 }
 
 .responsive-iframe {
@@ -175,8 +226,24 @@ nav ul {
 	margin: auto;
 }
 
+/*.slideshow-container {
+	max-width: 1000px;
+	position: relative;
+	margin: auto;
+}*/
+
 .socials {
 	float:left;
+}
+
+.text {
+	color: #f2f2f2;
+	font-size: 15px;
+	padding: 8px 12px;
+	position: absolute;
+	bottom: 8px;
+	width: 100%;
+	text-align: center;
 }
 
 /*---Responsive Resize Below---*/
@@ -206,4 +273,8 @@ nav ul {
 		height: 100%;
 		border: none;
 	}
+}
+
+@media only screen and (max-width: 300px) {
+	.prev, .next, .text {font-size: 11px}
 }
