--- a/main.css
+++ b/main.css
@@ -3,22 +3,10 @@
 
 * {
 	box-sizing: border-box;
-	.mySlides {display: none}
-	img {vertical-align: middle;}
 }
 
 * a {
 	text-decoration: none;
-}
-
-@keyframes fade {
-	from {opacity: .4}
-	to {opacity: 1}
-}
-
-@-webkit-keyframes fade {
-	from {opacity: .4}
-	to {opacity: 1}
 }
 
 body {
@@ -98,6 +86,7 @@ nav ul {
 	box-shadow: 5px 3px 1px gray;
 	grid-area: a;	
 	text-align: center;
+	padding: 40px;
 	font-family: adventure, script;
 }
 
@@ -133,13 +122,6 @@ nav ul {
 	margin: 0px;
 }
 
-.fade {
-	-webkit-animation-name: fade;
-	-webkit-animation-duration: 1.5s;
-	animation-name: fade;
-	animation-duration: 1.5s;
-}
-
 .footer {
 	background-color: #2C6E91;
 	box-shadow: 5px 3px 1px gray;
@@ -164,12 +146,12 @@ nav ul {
 
 .main {
 	display: grid;
-	grid-template-columns: 2fr 1fr;
+	grid-template-columns: 2fr 2fr;
 	grid-gap: 20px;
 	background-color: #51B9AE;
 	box-shadow: 5px 3px 1px gray; 
 	grid-area: m;
-	padding: 10px 40px 40px 40px;
+	padding: 10px 40px 10px 40px;
 	border: 2px solid black;
 	font-size: 20px;
 }
@@ -181,68 +163,19 @@ nav ul {
 	grid-area: n;
 }
 
-.prev, .next {
-	cursor: pointer;
-	position: relative;
-	top: 50%;
-	width: auto;
-	padding: 16px;
-	margin-top: -22px;
-	color: white;
-	font-weight: bold;
-	font-size: 18px;
-	transition: 0.6 ease;
-	border-radius: 0 3px 3px 0;
-	user-select: none;
-}
-
-.prev:hover, .next:hover {
-	background-color: rgba(0,0,0,0.8);
-}
-
-.next {
-	right: 0;
-	border-radius: 3px 0 0 3px;
-}
-
-.numbertext {
-	color: #f2f2f2;
-	font-size: 12px;
-	padding: 8px 12px;
-	position: absolute;
-	top: 0;
-}
-
 .responsive-iframe {
 	position: absolute;
 	top: 0;
 	left: 0;
 	bottom: 0;
 	right: 0;
-	width: 320px;
-	height: 240px;
+	width: 100%;
+	height: 100%;
 	border: none;
-	margin: auto;
 }
-
-/*.slideshow-container {
-	max-width: 1000px;
-	position: relative;
-	margin: auto;
-}*/
 
 .socials {
 	float:left;
-}
-
-.text {
-	color: #f2f2f2;
-	font-size: 15px;
-	padding: 8px 12px;
-	position: absolute;
-	bottom: 8px;
-	width: 100%;
-	text-align: center;
 }
 
 /*---Responsive Resize Below---*/
@@ -271,9 +204,5 @@ nav ul {
 		width: 100%;
 		height: 100%;
 		border: none;
-	}
 }
-
-@media only screen and (max-width: 300px) {
-	.prev, .next, .text {font-size: 11px}
 }
