--- a/blog.posts.css
+++ b/blog.posts.css
@@ -5,6 +5,11 @@
 	box-sizing: border-box;
 }
 
+* a {
+	text-decoration: none;
+	font-weight: bold;
+}
+
 body {
 	background-image:url("images/pattern.overlay2.jpg");
 	font-size: 22px;
@@ -13,7 +18,7 @@ body {
 
 h1 {
 	font-size: 27px;
-	font-weight: normal;
+	font-weight: bold;
 }
 
 img.center {
@@ -69,6 +74,10 @@ nav ul {
 	overflow: hidden;
 }
 
+p.center {
+	text-align: center;
+}
+
 /* --- ID Below Here --- */
 
 #logo {
@@ -109,6 +118,13 @@ nav ul {
 
 .date {
 	text-align: end;
+}
+
+.firstcharacter {
+	float: left;
+	font-size: 4.5em;
+	line-height: .5em;
+	padding: 4px 8px 0 3px;
 }
 
 .footer {
@@ -186,8 +202,5 @@ nav ul {
 		width: 100%;
 		height: 100%;
 		border: none;
-	}
-	.center {
-		
 	}
 }
