--- a/blog.posts.css
+++ b/blog.posts.css
@@ -11,7 +11,7 @@
 }
 
 body {
-	background-image:url("images/pattern.overlay2.jpg");
+/*	background-image:url("images/pattern.overlay2.jpg"); */
 	font-size: 22px;
 	font-family: goudy-old-style,serif, Cambria;
 }
