--- a/blog.posts.css
+++ b/blog.posts.css
@@ -31,6 +31,15 @@ img.center {
 	height: auto;
 }
 
+img.center2 {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
+	max-width: 300px;
+	height: auto;
+}
+
 nav a:active {
 	color:white;
 }
