--- a/blog.posts.css
+++ b/blog.posts.css
@@ -12,7 +12,7 @@
 }
 
 body {
-/*	background-image:url("images/pattern.overlay2.jpg"); */
+	background-image:url("images/pattern.overlay2.jpg");
 	font-size: 22px;
 	font-family: goudy-old-style,serif, Cambria;
 }
