--- a/about.css
+++ b/about.css
@@ -21,6 +21,14 @@ h1 {
 	font-weight: normal;
 }
 
+img {
+	max-width: 100%;
+	max-height: 100%;
+	display: block;
+	vertical-align: bottom;
+/*	object-fit: cover; */
+}
+
 nav a:active {
 	color:white;
 }
@@ -86,16 +94,20 @@ nav ul {
 	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: a;	
-	text-align: center;
-	padding: 40px;
-	font-family: adventure, script;
+	display: block;
 }
 
 .aside2 {
-	background-color: #D6E052;
+	display: block;
+	background-color: black;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: a2;
-	padding: 20px 40px;
+}
+
+.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .container {
@@ -141,14 +153,7 @@ nav ul {
 	border: 2px solid black;
 }
 
-.intro {
-	
-}
-
 .main {
-	display: grid;
-	grid-template-columns: 2fr 2fr;
-	grid-gap: 20px;
 	background-color: #51B9AE; 
 	box-shadow: 5px 3px 1px gray; 
 	grid-area: m;
@@ -186,15 +191,20 @@ nav ul {
 		grid-template-areas: 
 		"n n n n n n n n n n n n"
 		"h h h h h h h h h h h h"
-		"m m m m m m m m m m m m"
 		"a a a a a a a a a a a a"
+		"m m m m m m m m m m m m"
 		"a2 a2 a2 a2 a2 a2 a2 a2 a2 a2 a2 a2"
 		"f f f f f f f f f f f f";
 		width: 100%;
 	}
+	.heading {
+		padding: 10px 10px 10px 10px;
+	}
+	
 	.main {
 		grid-template-columns: auto;
 		grid-template-rows: auto;
+		padding: 10px 10px 10px 10px;
 	}
 	.responsive-iframe {
 		position: absolute;
@@ -206,4 +216,16 @@ nav ul {
 		height: 100%;
 		border: none;
 }
+}
+
+@media (max-width : 500px ) {
+	h2 {
+		font-size: 25px;
+	}
+	p, li {
+		font-size: 16px;
+	}
+	h1 {
+		font-size: 20px;
+	}
 }
