--- a/main.css
+++ b/main.css
@@ -192,9 +192,14 @@ nav ul {
 		"f f f f f f f f f f f f";
 		width: 100%;
 	}
+	
+	.heading {
+		padding: 10px 10px 10px 10px;
+	}
 	.main {
 		grid-template-columns: auto;
 		grid-template-rows: auto;
+		padding: 10px 10px 10px 10px;
 	}
 	.responsive-iframe {
 		position: absolute;
@@ -206,4 +211,16 @@ nav ul {
 		height: 100%;
 		border: none;
 }
+}
+
+@media (max-width : 500px ) {
+	h2 {
+		font-size: 25px;
+	}
+	p, li {
+		font-size: 16px;
+	}
+	h1 {
+		font-size: 20px;
+	}
 }
