--- a/contact.css
+++ b/contact.css
@@ -117,13 +117,13 @@ nav ul {
 	height: 100%;
 	margin: 15px auto auto auto;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: 50px auto auto auto auto 50px;
+	grid-template-rows: 50px auto auto 50px;
 	grid-template-areas: 
 		"n n n n n n n n n n n n"
 		"a a a h h h h h h h h h"
 		"a a a m m m m m m m m m"
-		"a2 a2 a2 m m m m m m m m m"
-		"a2 a2 a2 m m m m m m m m m"
+	/*	"a2 a2 a2 m m m m m m m m m" */
+	/*	"a2 a2 a2 m m m m m m m m m" */
 		"f f f f f f f f f f f f";
 }
 
@@ -178,6 +178,10 @@ nav ul {
 	width: 100%;
 	height: 100%;
 	border: none;
+}
+
+.right {
+	float: right;
 }
 
 .socials {
