--- a/resources.css
+++ b/resources.css
@@ -18,7 +18,6 @@ body {
 
 h1 {
 	font-size: 27px;
-	font-weight: normal;
 }
 
 nav a:active {
@@ -88,12 +87,14 @@ nav ul {
 	height: 100%;
 	margin: 15px auto auto auto;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: 50px auto auto auto 50px;
+	grid-template-rows: 50px auto auto auto auto auto 50px;
 	grid-template-areas: 
 		"n n n n n n n n n n n n"
 		"h h h h h h h h h h h h"
 		"s s s s s s s s s s s s"
 		"m m m m m m m m m m m m"
+		"s2 s2 s2 s2 s2 s2 s2 s2 s2 s2 s2 s2"
+		"m2 m2 m2 m2 m2 m2 m2 m2 m2 m2 m2 m2"
 		"f f f f f f f f f f f f";
 }
 
@@ -127,6 +128,17 @@ nav ul {
 	background-color: #51B9AE;
 	color: white;
 	box-shadow: 5px 3px 1px gray;
+	grid-area: m2;
+	padding: 5px 40px;
+	align-content: center;
+	justify-content: center;
+	border: 2px solid black;
+}
+
+.main2 {
+	background-color: #51B9AE;
+	color: white;
+	box-shadow: 5px 3px 1px gray;
 	grid-area: m;
 	padding: 5px 40px;
 	align-content: center;
@@ -157,6 +169,17 @@ nav ul {
 	color: black;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: s;
+	padding: 5px 40px;
+	align-content: center;
+	justify-content: center;
+	border: 2px solid black;
+}
+
+.section2 {
+	background-color: #D6E052;
+	color: black;
+	box-shadow: 5px 3px 1px gray;
+	grid-area: s2;
 	padding: 5px 40px;
 	align-content: center;
 	justify-content: center;
