--- a/resources.css
+++ b/resources.css
@@ -246,12 +246,14 @@ nav ul {
 		"m m m m m m m m m m m m"
 		"m2 m2 m2 m2 m2 m2 m2 m2 m2 m2 m2 m2"
 		"m3 m3 m3 m3 m3 m3 m3 m3 m3 m3 m3 m3"
-		"s s s s s s s s s s s s"
+		"s2 s2 s2 s2 s2 s2 s2 s2 s2 s2 s2 s2"
 		"m4 m4 m4 m4 m4 m4 m4 m4 m4 m4 m4 m4"
 		"m5 m5 m5 m5 m5 m5 m5 m5 m5 m5 m5 m5"
 		"m6 m6 m6 m6 m6 m6 m6 m6 m6 m6 m6 m6"
 		"f f f f f f f f f f f f";
 		width: 100%;
+		grid-template-rows: 50px auto auto auto auto auto auto auto auto auto 50px;
+
 	}
 	
 	.heading {
