--- a/resources.css
+++ b/resources.css
@@ -101,9 +101,16 @@ nav ul {
 .container-youtube {
 	position: relative;
 	width: 100%;
-	overflow: hidden;
-	padding-top: 56.25%;
-	margin: 0px;
+	padding-bottom: 56.25%;
+	height: 0;
+}
+
+.container-youtube iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 .footer {
@@ -129,10 +136,17 @@ nav ul {
 	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m;
-	padding: 5px 40px;
+	padding: 20px 10px 10px 20px;
 	align-content: center;
 	justify-content: center;
 	border: 2px solid black;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-column-gap: 15px;
+}
+
+.main p {
+	padding: 
 }
 
 .main2 {
@@ -140,7 +154,7 @@ nav ul {
 	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m2;
-	padding: 5px 40px;
+	padding: 10px 40px;
 	align-content: center;
 	justify-content: center;
 	border: 2px solid black;
@@ -151,7 +165,7 @@ nav ul {
 	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m3;
-	padding: 5px 40px;
+	padding: 10px 40px;
 	align-content: center;
 	justify-content: center;
 	border: 2px solid black;
@@ -162,7 +176,7 @@ nav ul {
 	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m4;
-	padding: 5px 40px;
+	padding: 10px 40px;
 	align-content: center;
 	justify-content: center;
 	border: 2px solid black;
@@ -173,7 +187,7 @@ nav ul {
 	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m5;
-	padding: 5px 40px;
+	padding: 10px 40px;
 	align-content: center;
 	justify-content: center;
 	border: 2px solid black;
@@ -184,7 +198,7 @@ nav ul {
 	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m6;
-	padding: 5px 40px;
+	padding: 10px 40px;
 	align-content: center;
 	justify-content: center;
 	border: 2px solid black;
@@ -196,17 +210,6 @@ nav ul {
 	box-shadow: 5px 3px 1px gray;
 	color: white;
 	grid-area: n;
-}
-
-.responsive-iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	width: 100%;
-	height: 100%;
-	border: none;
 }
 
 .section {
