--- a/resources.css
+++ b/resources.css
@@ -136,7 +136,7 @@ nav ul {
 	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m;
-	padding: 20px 10px 10px 20px;
+	padding: 20px 10px 20px 20px;
 	align-content: center;
 	justify-content: center;
 	border: 2px solid black;
@@ -146,7 +146,15 @@ nav ul {
 }
 
 .main p {
-	padding: 
+	margin:0; 
+}
+
+.main2 p {
+	margin:0; 
+}
+
+.main3 p {
+	margin:0; 
 }
 
 .main2 {
@@ -154,10 +162,13 @@ nav ul {
 	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m2;
-	padding: 10px 40px;
+	padding: 20px 10px 20px 20px;
 	align-content: center;
 	justify-content: center;
 	border: 2px solid black;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-column-gap: 15px;
 }
 
 .main3 {
@@ -165,10 +176,13 @@ nav ul {
 	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m3;
-	padding: 10px 40px;
+	padding: 20px 10px 20px 20px;
 	align-content: center;
 	justify-content: center;
 	border: 2px solid black;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-column-gap: 15px;
 }
 
 .main4 {
