--- a/main.css
+++ b/main.css
@@ -124,9 +124,16 @@ nav ul {
 .container-youtube {
 	position: relative;
 	width: 100%;
-	overflow: hidden;
-	padding-top: 56.25%;
-	margin: 0px;
+	padding-bottom: 56.25%;
+	height: 0;
+}
+
+.container-youtube iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 .footer {
@@ -153,7 +160,7 @@ nav ul {
 
 .main {
 	display: grid;
-	grid-template-columns: 2fr 2fr;
+	grid-template-columns: 3fr 2fr;
 	grid-gap: 20px;
 	background-color: #51B9AE; 
 	box-shadow: 5px 3px 1px gray; 
@@ -163,6 +170,10 @@ nav ul {
 	font-size: 20px;
 }
 
+.center {
+	padding: 50px;
+}
+
 .navbar {
 	background-color: #8361AB;
 	box-shadow: 5px 3px 1px gray;
@@ -170,16 +181,6 @@ nav ul {
 	grid-area: n;
 }
 
-.responsive-iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	width: 100%;
-	height: 100%;
-	border: none;
-}
 
 .socials {
 	float:left;
