--- a/resources.css
+++ b/resources.css
@@ -102,7 +102,7 @@ nav ul {
 	position: relative;
 	width: 100%;
 	padding-bottom: 56.25%;
-	height: 0;
+	height: 0;	
 }
 
 .container-youtube iframe {
@@ -112,6 +112,11 @@ nav ul {
 	width: 100%;
 	height: 100%;
 }
+
+.float {
+	float: left;
+	margin-right: 10px;
+	}
 
 .footer {
 	background-color: #2C6E91;
@@ -133,7 +138,6 @@ nav ul {
 
 .main {
 	background-color: #51B9AE;
-	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m;
 	padding: 20px 10px 20px 20px;
@@ -159,7 +163,6 @@ nav ul {
 
 .main2 {
 	background-color: #51B9AE;
-	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m2;
 	padding: 20px 10px 20px 20px;
@@ -173,7 +176,6 @@ nav ul {
 
 .main3 {
 	background-color: #51B9AE;
-	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m3;
 	padding: 20px 10px 20px 20px;
@@ -187,7 +189,6 @@ nav ul {
 
 .main4 {
 	background-color: #51B9AE;
-	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m4;
 	padding: 10px 40px;
@@ -198,7 +199,6 @@ nav ul {
 
 .main5 {
 	background-color: #51B9AE;
-	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m5;
 	padding: 10px 40px;
@@ -209,7 +209,6 @@ nav ul {
 
 .main6 {
 	background-color: #51B9AE;
-	color: white;
 	box-shadow: 5px 3px 1px gray;
 	grid-area: m6;
 	padding: 10px 40px;
@@ -270,27 +269,10 @@ nav ul {
 		"f f f f f f f f f f f f";
 		width: 100%;
 		grid-template-rows: 50px auto auto auto auto auto auto auto auto auto 50px;
-
 	}
-	
 	.heading {
 		padding: 10px 10px 10px 10px;
 	}
-	.main .main2 .main3 .main4 .main5 .main6 {
-		grid-template-columns: auto;
-		grid-template-rows: auto;
-		padding: 10px 10px 10px 10px;
-	} 
-	.responsive-iframe {
-		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
-		width: 100%;
-		height: 100%;
-		border: none;
-}
 }
 
 @media (max-width : 500px ) {
