--- a/craft.css
+++ b/craft.css
@@ -19,10 +19,7 @@ body {
 
 form {
 	background-color: white;
-/*	display: grid;
-	grid-template-columns: 2fr 1fr;
-	grid-template-areas: 
-	"s l"; */
+	padding: 20px;
 }
 
 .learn {
@@ -257,7 +254,7 @@ p.center {
 	h2 {
 		font-size: 25px;
 	}
-	p, li {
+	p, li, label {
 		font-size: 16px;
 	}
 	h1 {
