--- a/about.css
+++ b/about.css
@@ -241,7 +241,11 @@ nav ul {
 		border: none;
 }
 }
-
+@media (max-width:750px){
+	.search-container button {
+		display: none;
+	}
+}
 @media (max-width : 500px ) {
 	h2 {
 		font-size: 25px;
