--- a/contact.css
+++ b/contact.css
@@ -243,7 +243,11 @@ nav ul {
 		border: none;
 }
 }
-
+@media (max-width:750px){
+	.search-container button {
+		display: none;
+	}
+}
 @media (max-width : 500px ) {
 	h2 {
 		font-size: 25px;
