--- a/craft.css
+++ b/craft.css
@@ -273,6 +273,12 @@ p.center {
 		border: none;
 	}
 }
+@media (max-width:750px){
+	.search-container button {
+		display: none;
+	}
+}
+
 @media (max-width : 500px ) {
 	h2 {
 		font-size: 25px;
