--- a/main.css
+++ b/main.css
@@ -286,4 +286,8 @@ nav ul {
 	.aside h1 {
 		font-size: 25px;
 	}
+	.aside p {
+		font-size: 16px;
+		font-family: "Goudy Old Style", Cambria;
+	}
 }
