--- a/blogmenu.css
+++ b/blogmenu.css
@@ -329,3 +329,13 @@ div a {
 		grid-template-rows: auto;
 	}
 }
+@media (max-width:450px) {
+	nav li a {
+		padding-left: 5px;
+	}
+}
+@media (max-width:450px) {
+	nav li a {
+		padding-left: 5px;
+	}
+}
